--- a/Runde1/src/config.yml
+++ b/Runde1/src/config.yml
@@ -1,1 +1,10 @@
 min-player: 2
+spawn-lobby: 0,0,0
+spawn-1: 10,10,10
+spawn-2: 10,10,10
+spawn-3: 10,10,10
+spawn-4: 10,10,10
+spawn-5: 10,10,10
+spawn-6: 10,10,10
+spawn-7: 10,10,10
+spawn-8: 10,10,10
