--- a/Runde1/src/config.yml
+++ b/Runde1/src/config.yml
@@ -1,13 +1,13 @@
 min-player: 2
-spawn-lobby: 0,0,0
+spawn-lobby: 427,90,-997
 number-of-spawns: 8
-spawn-1: 10,10,10
-spawn-2: 10,10,10
-spawn-3: 10,10,10
-spawn-4: 10,10,10
-spawn-5: 10,10,10
-spawn-6: 10,10,10
-spawn-7: 10,10,10
-spawn-8: 10,10,10
+spawn-1: 362,80,-386
+spawn-2: 464,84,-413
+spawn-3: 421,80,-401
+spawn-4: 450,78,-385
+spawn-5: 391,77,-402
+spawn-6: 390,79,-432
+spawn-7: 418,82,-449
+spawn-8: 362,80,-426
 number-of-healing-stations: 1
-healing-1: 20,20,20
+healing-1: 428,81,-398
